[package]
name = "insviewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.15"

async-std = "1.0"
directories-next = "2.0"

font-kit = "0.10"