[package]
name = "insviewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.15"

async-std = "1.0"
directories-next = "2.0"

# dataframe with rust
polars = "0.28.0"


druid = { git = "https://github.com/linebender/druid.git" }
